--- a/scss/parciales/_comprar.scss
+++ b/scss/parciales/_comprar.scss
@@ -1,7 +1,5 @@
 /* Pagina donde comprar carrousel*/
 
-.carousel__dondecomprar {
-    & img {
-        height: 90vh;
-    }
+.carousel__dondecomprar img {
+    height: 90vh;
 }
