--- a/scss/parciales/_info.scss
+++ b/scss/parciales/_info.scss
@@ -7,6 +7,6 @@
     height: 100vh;
     align-items: center;
     &__frase {
-        color: gold;
+        color: map-get($colores, "dorado");
     }
 }
