--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,4 +3,5 @@
 @import "./parciales/index";
 @import "./parciales/info";
 @import "./parciales/comprar";
+@import "./parciales/suscribite";
 @import "./parciales/contacto";
