--- a/scss/parciales/_contacto.scss
+++ b/scss/parciales/_contacto.scss
@@ -1,46 +1,35 @@
-/*pagina contacto*/
-
-.grilla__contacto {
-    display: grid;
-    grid-template-areas: "contenido3" "pie3";
-    grid-template-columns: 1fr;
-    grid-template-rows: 90% 10%;
-}
-
-.contenidos {
-    grid-area: contenido3;
-}
-
-.contenido {
-    &__titulo {
-        color: map-get($colores, "cont");
-        font-family: 'Kodchasan', sans-serif;
+    /*pagina contacto*/
+    
+    .grilla__contacto {
+        display: grid;
+        grid-template-areas: "contenido3" "pie3";
+        grid-template-columns: 1fr;
+        grid-template-rows: 90% 10%;
     }
-    &__sectionf {
-        color: map-get($colores, "cont");
-        padding: 2rem 30%;
-        font-family: 'Poller One', cursive;
-        text-align: center;
-        color: map-get($colores, "dorado");
-        display: flex;
-        flex-direction: column;
-        height: 40rem;
+    
+    .contenidos {
+        grid-area: contenido3;
     }
-    &__boton {
-        padding: 1.2rem;
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-        border-radius: 10%;
-        color: map-get($colores, "cont");
-        background-color: map-get($colores, "dorado");
-        border: solid 0.5rem map-get($colores, "boton");
-        transition: padding 3s;
-        &:hover {
-            padding: 2rem;
+    
+    .contenido {
+        &__titulo {
+            color: map-get($colores, "cont");
+            font-family: 'Kodchasan', sans-serif;
+        }
+        &__sectionf {
+            @include box;
+        }
+        &__boton {
+            padding: 1.2rem;
+            margin-top: 2rem;
+            margin-bottom: 2rem;
+            @include vos;
+            &:hover {
+                padding: 2rem;
+            }
         }
     }
-}
-
-.pie__contacto {
-    grid-area: pie3;
-}
+    
+    .pie__contacto {
+        grid-area: pie3;
+    }
