--- a/scss/parciales/_index.scss
+++ b/scss/parciales/_index.scss
@@ -1,18 +1,40 @@
-/*para index*/
-
-.div__imagen {
-    margin: 2rem;
-    border-radius: 20%;
-    object-fit: cover;
-    width: 47rem;
-    height: 23rem;
-    transition: height 1s, width 1s;
-    &:hover {
-        width: 55rem;
-        height: 31rem;
-    }
-}
-
-.body__p {
-    color: map-get($colores, "destacado");
-}
+                /*para index*/
+                
+                .main_p1 {
+                    color: map-get($colores, "blanco")
+                }
+                
+                .division {
+                    color: map-get($colores, "dorado");
+                }
+                
+                .div__imagen {
+                    margin: 2rem;
+                    border-radius: 20%;
+                    object-fit: cover;
+                    width: 47rem;
+                    height: 23rem;
+                    transition: height 1s, width 1s;
+                    &:hover {
+                        width: 55rem;
+                        height: 31rem;
+                    }
+                }
+                
+                .body__p {
+                    color: map-get($colores, "destacado");
+                }
+                
+                .boton__index {
+                    padding: 1.2rem;
+                    margin-top: 2rem;
+                    margin-bottom: 2rem;
+                    border-radius: 10%;
+                    color: map-get($colores, "cont");
+                    background-color: map-get($colores, "dorado");
+                    border: solid 0.5rem map-get($colores, "boton");
+                    transition: padding 3s;
+                    &:hover {
+                        padding: 2rem;
+                    }
+                }
