--- a/scss/parciales/_map.scss
+++ b/scss/parciales/_map.scss
@@ -1,1 +1,3 @@
-$colores: ("back":#000000eb, "blanco":#f3ebeb, "dorado":#ffd700, "cont":#0606dd, "destacado":tomato, "boton":brown);
+/*mapa*/
+
+$colores: ("back":#000000eb, "blanco":#f3ebeb, "dorado":#ffd700, "cont":#0303f0, "destacado":tomato, "boton":brown);
