--- a/scss/parciales/_suscribite.scss
+++ b/scss/parciales/_suscribite.scss
@@ -1,3 +1,5 @@
+/*paginas sucripciones*/
+
 .grilla__suscribite {
     display: grid;
     grid-template-areas: "sucripcion3" "pie4";
@@ -15,25 +17,15 @@
         font-family: 'Kodchasan', sans-serif;
     }
     &__sectionf {
-        color: map-get($colores, "dorado");
-        padding: 2rem 30%;
-        font-family: 'Poller One', cursive;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        height: 40rem;
+        @include box;
     }
     &__boton {
-        padding: 1.2rem;
+        @include vos;
+        padding: 2.2rem;
         margin-top: 2rem;
         margin-bottom: 2rem;
-        border-radius: 10%;
-        color: map-get($colores, "cont");
-        background-color: map-get($colores, "dorado");
-        border: solid 0.5rem map-get($colores, "boton");
-        transition: padding 3s;
         &:hover {
-            padding: 2rem;
+            padding: 5rem;
         }
     }
     &__aviso {
