--- a/css/estilo.css
+++ b/css/estilo.css
@@ -69,7 +69,17 @@ li:hover {
 
 /* Pagina donde comprar carrousel*/
 .carousel__dondecomprar img {
-  height: 80vh; }
+  height: 90vh;
+  width: 100%; }
+
+.boton__dondecomprar {
+  border-radius: 5%;
+  color: #0303f0;
+  background-color: #ffd700;
+  border: solid 0.2rem brown; }
+
+.titulo_dondecomprar {
+  font-size: medium; }
 
 /*pagina contacto*/
 .grilla__contacto {
